--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
               <a href="./menu.html" class="nav-link" aria-current="page">Menu</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./about.html">About Us</a>
+              <a class="nav-link" href="./about.html">Best Sellers</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -112,6 +112,19 @@
         </form>
       </div>
     </main>
+      <footer id="footer" class="text-center">
+        <img
+          width="10%"
+          height="10%"
+          src="./img/dragon.png"
+          alt="..."
+          class="img-fluid"
+        />
+        <p>
+          © Ming's Diner 2021 <br />
+          <span id="author">Developed with ♥ by <b>Phil Fernandez</b></span>
+        </p>
+      </footer>
     <script src="./js/app.js"></script>
   </body>
 </html>
