--- a/index.html
+++ b/index.html
@@ -23,140 +23,171 @@
     <!-- menu -->
     <!-- address -->
     <!-- contact -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a href="" class="navbar-brand"
-          ><img src="./img/favicon.ico" alt="" width="30" height="24"
-        /></a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a href="./menu.html" class="nav-link" aria-current="page"
-                >Menu</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./about.html">About Us</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Contact Us
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li class="dropdown-item">(555) 555-5555</li>
-                <li class="dropdown-item">123 2nd Ave</li>
-                <li class="dropdown-item">Townville, CA</li>
-                <li>
-                  <hr class="dropdown-divider" />
-                  <a class="dropdown-item" href="./contact.html">Message Us</a>
+    <div id="page-container">
+      <div id="content-wrap">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <div class="container-fluid">
+            <a href="" class="navbar-brand"
+              ><img src="./img/favicon.ico" alt="" width="30" height="24"
+            /></a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a href="./menu.html" class="nav-link" aria-current="page"
+                    >Menu</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./about.html">Best Sellers</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="navbarDropdown"
+                    role="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    Contact Us
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li class="dropdown-item">(555) 555-5555</li>
+                    <li class="dropdown-item">123 2nd Ave</li>
+                    <li class="dropdown-item">Townville, CA</li>
+                    <li>
+                      <hr class="dropdown-divider" />
+                      <a class="dropdown-item" href="./contact.html"
+                        >Message Us</a
+                      >
+                    </li>
+                  </ul>
                 </li>
               </ul>
-            </li>
-          </ul>
-          <form class="d-flex">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success" type="submit">
-              Search
-            </button>
-          </form>
-        </div>
-      </div>
-    </nav>
-    <header class="text-center">
-      <h1 class="display-4 mt-4"><b>Ming's Diner</b></h1>
-    </header>
-    <main>
-      <div class="container-sm p-5">
-        <div
-          id="carouselExampleIndicators"
-          class="carousel carousel-dark slide"
-          data-bs-ride="carousel"
-          data-bs-interval="3000"
-        >
-          <ol class="carousel-indicators">
-            <li
-              data-bs-target="#carouselExampleIndicators"
-              data-bs-slide-to="0"
-              class="active"
-            ></li>
-            <li
-              data-bs-target="#carouselExampleIndicators"
-              data-bs-slide-to="1"
-            ></li>
-            <li
-              data-bs-target="#carouselExampleIndicators"
-              data-bs-slide-to="2"
-            ></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="./img/dish.jpg" class="d-block w-100" alt="..." />
-            </div>
-            <div class="carousel-item">
-              <img src="./img/potSticker.jpg" class="d-block w-100" alt="..." />
-            </div>
-            <div class="carousel-item">
-              <img src="./img/noods.jpg" class="d-block w-100" alt="..." />
+              <form class="d-flex">
+                <input
+                  class="form-control me-2"
+                  type="search"
+                  placeholder="Search"
+                  aria-label="Search"
+                />
+                <button class="btn btn-outline-success" type="submit">
+                  Search
+                </button>
+              </form>
             </div>
           </div>
-          <a
-            class="carousel-control-prev"
-            href="#carouselExampleIndicators"
-            role="button"
-            data-bs-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </a>
-          <a
-            class="carousel-control-next"
-            href="#carouselExampleIndicators"
-            role="button"
-            data-bs-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </a>
-        </div>
+        </nav>
+        <header class="text-center">
+          <h1 class="display-4 mt-4"><b>Ming's Diner</b></h1>
+        </header>
+        <main>
+          <div class="container-sm p-5">
+            <div
+              id="carouselExampleIndicators"
+              class="carousel carousel-dark slide"
+              data-bs-ride="carousel"
+              data-bs-interval="3000"
+            >
+              <ol class="carousel-indicators">
+                <li
+                  data-bs-target="#carouselExampleIndicators"
+                  data-bs-slide-to="0"
+                  class="active"
+                ></li>
+                <li
+                  data-bs-target="#carouselExampleIndicators"
+                  data-bs-slide-to="1"
+                ></li>
+                <li
+                  data-bs-target="#carouselExampleIndicators"
+                  data-bs-slide-to="2"
+                ></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="./img/dish.jpg" class="d-block w-100" alt="..." />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="./img/potSticker.jpg"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img src="./img/noods.jpg" class="d-block w-100" alt="..." />
+                </div>
+              </div>
+              <a
+                class="carousel-control-prev"
+                href="#carouselExampleIndicators"
+                role="button"
+                data-bs-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Previous</span>
+              </a>
+              <a
+                class="carousel-control-next"
+                href="#carouselExampleIndicators"
+                role="button"
+                data-bs-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Next</span>
+              </a>
+            </div>
+          </div>
+          <section>
+            <div class="container">
+              <h1 class="display-6">Our Restaurant</h1>
+              <hr />
+              <p class="overview">
+                Here at Ming's Diner we believe that the customer is always
+                right. Just come into our wonderful Chinese restaurant and you
+                <i>will</i> have an eating experience like none other. We have
+                all of your Chinese buffet favorites, or you can order from our
+                ale-cart menu if that better suites your needs. And all praise
+                be to our wonderful web developer <b>Phil Fernandez</b>. Without
+                him, and his outstanding web programing skills none of this
+                would be possible. Have a Mingeriffic day!
+              </p>
+              <hr class="bottom" />
+            </div>
+          </section>
+        </main>
       </div>
-      <section>
-        <div class="container">
-          <h1 class="display-6">Our Restaurant</h1>
-          <hr>
-          <p class="overview">
-            Here at Ming's Diner we believe that the customer is always right. Just come into our 
-            wonderful Chinese restaurant and you <i>will</i> have an eating experience like none other. 
-            We have all of your Chinese buffet favorites, or you can order from our ale-cart menu if 
-            that better suites your needs. And all praise be to our wonderful
-            web developer <b>Phil Fernandez</b>. Without him, and his outstanding web programing skills
-            none of this would be possible. Have a Mingeriffic day!
-          </p>
-          <hr class="bottom">
-        </div>
-      </section>
-    </main>
+      <footer id="footer" class="text-center">
+        <img
+          width="10%"
+          height="10%"
+          src="./img/dragon.png"
+          alt="..."
+          class="img-fluid"
+        />
+        <p>
+          © Ming's Diner 2021 <br />
+          <span id="author">Developed with ♥ by <b>Phil Fernandez</b></span>
+        </p>
+      </footer>
+    </div>
   </body>
 </html>
